--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -23,7 +23,7 @@
         <div class="navbar-header d-flex align-items-center justify-content-between">
             <!-- Navbar Brand -->
             <a href="{% url 'index' %}" class="navbar-brand">
-              <img src ="{% static 'admin/img/logo.png' %}" class="logo" alt="">             
+              <img src ="{% static 'img/logo.png' %}" class="logo" alt="Avele">             
             </a>
           <!-- Toggle Button-->
           <button type="button" data-toggle="collapse" data-target="#navbarcollapse" aria-controls="navbarcollapse" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"><span></span><span></span><span></span></button>
@@ -43,13 +43,16 @@
             </li>
             <li class="nav-item"><a href="post.html" class="nav-link ">Store</a>
               <li 
-              {% if 'contact' == request.path %}
-                class="nav-item active"
+              {% if 'contact' in request.path %}
+              class="nav-item active mr-3"
               {% else %}
-                class="nav-item">
-              {% endif %}
-                <a href="{% url 'contact' %}" class="nav-link">Contact</a>
-            </li>
+              class="nav-item mr-3"
+              {% endif %}>
+                <a class="nav-link" href="{%  url 'contact' %}">
+                  <i class="fas fa-sign-in-alt"></i>
+
+                  Contact</a>
+              </li>
           </ul>
           <div class="navbar-text"><a href="#" class="search-btn"><i class="icon-search-1"></i></a></div>
         </div>
