--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -23,7 +23,7 @@
         <div class="navbar-header d-flex align-items-center justify-content-between">
             <!-- Navbar Brand -->
             <a href="{% url 'index' %}" class="navbar-brand">
-              <img src ="{% static 'img/logo.png' %}" class="logo" alt="Avele">             
+              <img src ="{% static 'img/logo.png' %}" class="logo" alt="Avele" height="35" width="70">             
             </a>
           <!-- Toggle Button-->
           <button type="button" data-toggle="collapse" data-target="#navbarcollapse" aria-controls="navbarcollapse" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"><span></span><span></span><span></span></button>
