--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -31,28 +31,47 @@
         <!-- Navbar Menu -->
         <div id="navbarcollapse" class="collapse navbar-collapse">
           <ul class="navbar-nav ml-auto">
-            <li 
-              {% if '' == request.path %}
-                class="nav-item active"
-              {% else %}
-                class="nav-item">
-              {% endif %}
-                <a href="{% url 'index' %}" class="nav-link">Home</a>
-            </li>
-            <li class="nav-item"><a href="blog.html" class="nav-link ">Blog</a>
-            </li>
-            <li class="nav-item"><a href="post.html" class="nav-link ">Store</a>
-              <li 
-              {% if 'contact' in request.path %}
-              class="nav-item active mr-3"
-              {% else %}
-              class="nav-item mr-3"
-              {% endif %}>
-                <a class="nav-link" href="{%  url 'contact' %}">
-                  <i class="fas fa-sign-in-alt"></i>
 
-                  Contact</a>
-              </li>
+            <li 
+              {% if '/' == request.path %}
+                class="nav-item active mr-3 "
+              {% else %}
+                class="nav-item mr-3"
+              {% endif %}
+            >
+                <a href={% url 'index' %} class="nav-link">Home</a>
+            </li> 
+
+            <li 
+              {% if 'blog' in request.path %}
+                class="nav-item active mr-3 "
+              {% else %}
+                class="nav-item mr-3"
+              {% endif %}
+            >
+                <a href={% url 'blog' %} class="nav-link">Blog</a>
+            </li> 
+
+            <li 
+            {% if 'store' in request.path %}
+              class="nav-item active mr-3 "
+            {% else %}
+              class="nav-item mr-3"
+            {% endif %}
+            >
+                <a href={% url 'store' %} class="nav-link">Store</a>
+            </li>
+
+            <li 
+            {% if 'contact' in request.path %}
+              class="nav-item active mr-3 "
+            {% else %}
+              class="nav-item mr-3"
+            {% endif %}
+            >
+                <a href={% url 'contact' %} class="nav-link">Contact</a>
+            </li>
+
           </ul>
           <div class="navbar-text"><a href="#" class="search-btn"><i class="icon-search-1"></i></a></div>
         </div>
