--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -56,7 +56,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <p>&copy; 2017. All rights reserved. Your great site.</p>
+            <p>&copy; 2017. All rights reserved. H3D Technologies</p>
           </div>
           <div class="col-md-6 text-right">
             
