blog page and pagination

--- a/templates/blog/blog.html
+++ b/templates/blog/blog.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% load humanize %}
+
 {% block content %}
 
 <div class="container">
@@ -13,36 +15,69 @@
 
                 <!-- post -->
                 <div class="post col-xl-6">
-                  <div class="post-thumbnail"><a href="post.html"><img src="{{ blogpost.photo_main.url }}" alt="..." class="img-fluid"></a></div>
+                  <div class="post-thumbnail"><a href="{% url 'blogpost' blogpost.id %}"><img src="{{ blogpost.photo_main.url }}" alt="..." class="img-fluid"></a></div>
                   <div class="post-details">
                     <div class="post-meta d-flex justify-content-between">
-                      <div class="date meta-last">20 May | 2016</div>
-                      <div class="category"><a href="#">{{ blogpost.category }}</a></div>
-                    </div><a href="post.html">
+                     <div class="category"><a href="#">{{ blogpost.category }}</a></div>
+                    </div><a href="{% url 'blogpost' blogpost.id %}">
                       <h3 class="h4">{{ blogpost.title }}</h3></a>
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
                     <footer class="post-footer d-flex align-items-center">
-                      <div class="date"><i class="icon-clock"></i> {{ blogpost.list_date }}</div>
+                      <div class="date"><i class="icon-clock"></i> {{ blogpost.list_date | timesince }} Ago</div>
                     </footer>
                   </div>
                 </div>
 
-              {% endfor%}
+              {% endfor %}
 
             {% else %}
               <div class="col-md-12">
                 <p> No Posts Available </p>
               </div>
             {% endif %}
-            
-                   <!-- Pagination -->
+          </div> 
+          <!-- Pagination -->
           <nav aria-label="Page navigation example">
-            <ul class="pagination pagination-template d-flex justify-content-center">
-              <li class="page-item"><a href="#" class="page-link"> <i class="fa fa-angle-left"></i></a></li>
-              <li class="page-item"><a href="#" class="page-link active">1</a></li>
-              <li class="page-item"><a href="#" class="page-link">2</a></li>
-              <li class="page-item"><a href="#" class="page-link">3</a></li>
-              <li class="page-item"><a href="#" class="page-link"> <i class="fa fa-angle-right"></i></a></li>
+
+              {% if blog.has_other_pages %}
+              <ul class="pagination pagination-template d-flex justify-content-center">
+                {% if blog.has_previous %}
+                  <li class="page-item">
+                    <a class="page-link" href="?page={{blog.previous_page_number}}">
+                      <i class="fa fa-angle-left"></i>
+                    </a>
+                  </li>
+                {% else %}
+                  <li class="page-item disabled">
+                      <a class="page-link">
+                        <i class="fa fa-angle-left"></i>
+                      </a>
+                {% endif %}
+                {% for i in blog.paginator.page_range %}
+                  {% if blog.number == i %}
+                    <li class="page-item active">
+                      <a class="page-link">{{i}}</a>
+                    </li>
+                  {% else %}
+                    <li class="page-item">
+                      <a class="page-link" href="?page={{i}}">{{i}}</a>
+                    </li>
+                  {% endif %}
+                {% endfor %}
+                {% if blog.has_next %}
+                  <li class="page-item">
+                    <a class="page-link" href="?page={{blog.next_page_number}}">
+                      <i class="fa fa-angle-right"></i>
+                    </a>
+                  </li>
+                {% else %}
+                  <li class="page-item disabled">
+                      <a class="page-link">
+                        <i class="fa fa-angle-right"></i>
+                      </a>
+                {% endif %}
+              </ul>
+            {% endif %}
             </ul>
           </nav>
         </div>
@@ -75,6 +110,6 @@
         </div>
       </aside>
     </div>
-  </div>
+</div>
 
 {% endblock %}
