--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -2,14 +2,17 @@
 
 {% load static %}
 
+{% load humanize %}
+
 {% block content %}
 
 <!-- Hero Section-->
-  <section style="background: url(img/hero.jpg); background-size: cover; background-position: center center" class="hero">
+  <section style="background: url({% static 'img/bg1.jpg' %}); background-size: cover; background-position: center center" class="hero">
     <div class="container">
-      <div class="row">
-        <div class="col-lg-7">
-          <h1>Bootstrap 4 Blog - A free template by Bootstrap Temple</h1><a href="#" class="hero-link">Discover More</a>
+      <div>
+        <div>
+          <h1 class='text-center'>Avele</h1>
+          <h6 class='text-center'> Get in the best shape of your life</h6>
         </div>
       </div><a href=".intro" class="continue link-scroll"><i class="fa fa-long-arrow-down"></i> Scroll Down</a>
     </div>
@@ -25,148 +28,80 @@
       </div>
     </div>
   </section>
-  <section class="featured-posts no-padding-top">
-    <div class="container">
-      <!-- Post-->
-      <div class="row d-flex align-items-stretch">
-        <div class="text col-lg-7">
-          <div class="text-inner d-flex align-items-center">
-            <div class="content">
-              <header class="post-header">
-                <div class="category"><a href="#">Business</a><a href="#">Technology</a></div><a href="post.html">
-                  <h2 class="h4">Alberto Savoia Can Teach You About Interior</h2></a>
-              </header>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrude consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
-              <footer class="post-footer d-flex align-items-center"><a href="#" class="author d-flex align-items-center flex-wrap">
-                  <div class="avatar"><img src="img/avatar-1.jpg" alt="..." class="img-fluid"></div>
-                  <div class="title"><span>John Doe</span></div></a>
-                <div class="date"><i class="icon-clock"></i> 2 months ago</div>
-                <div class="comments"><i class="icon-comment"></i>12</div>
-              </footer>
-            </div>
-          </div>
-        </div>
-        <div class="image col-lg-5"><img src="img/featured-pic-1.jpeg" alt="..."></div>
-      </div>
-      <!-- Post        -->
-      <div class="row d-flex align-items-stretch">
-        <div class="image col-lg-5"><img src="img/featured-pic-2.jpeg" alt="..."></div>
-        <div class="text col-lg-7">
-          <div class="text-inner d-flex align-items-center">
-            <div class="content">
-              <header class="post-header">
-                <div class="category"><a href="#">Business</a><a href="#">Technology</a></div><a href="post.html">
-                  <h2 class="h4">Alberto Savoia Can Teach You About Interior</h2></a>
-              </header>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrude consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
-              <footer class="post-footer d-flex align-items-center"><a href="#" class="author d-flex align-items-center flex-wrap">
-                  <div class="avatar"><img src="img/avatar-2.jpg" alt="..." class="img-fluid"></div>
-                  <div class="title"><span>John Doe</span></div></a>
-                <div class="date"><i class="icon-clock"></i> 2 months ago</div>
-                <div class="comments"><i class="icon-comment"></i>12</div>
-              </footer>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- Post                            -->
-      <div class="row d-flex align-items-stretch">
-        <div class="text col-lg-7">
-          <div class="text-inner d-flex align-items-center">
-            <div class="content">
-              <header class="post-header">
-                <div class="category"><a href="#">Business</a><a href="#">Technology</a></div><a href="post.html">
-                  <h2 class="h4">Alberto Savoia Can Teach You About Interior</h2></a>
-              </header>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrude consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
-              <footer class="post-footer d-flex align-items-center"><a href="#" class="author d-flex align-items-center flex-wrap">
-                  <div class="avatar"><img src="img/avatar-3.jpg" alt="..." class="img-fluid"></div>
-                  <div class="title"><span>John Doe</span></div></a>
-                <div class="date"><i class="icon-clock"></i> 2 months ago</div>
-                <div class="comments"><i class="icon-comment"></i>12</div>
-              </footer>
-            </div>
-          </div>
-        </div>
-        <div class="image col-lg-5"><img src="img/featured-pic-3.jpeg" alt="..."></div>
-      </div>
-    </div>
-  </section>
-  <!-- Divider Section-->
-  <section style="background: url(img/divider-bg.jpg); background-size: cover; background-position: center bottom" class="divider">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-7">
-          <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</h2><a href="#" class="hero-link">View More</a>
-        </div>
-      </div>
-    </div>
-  </section>
+
   <!-- Latest Posts -->
   <section class="latest-posts"> 
     <div class="container">
       <header> 
-        <h2>Latest from the blog</h2>
-        <p class="text-big">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+        <h2 class='text-center'>Latest from the blog</h2>
       </header>
       <div class="row">
-        <div class="post col-md-4">
-          <div class="post-thumbnail"><a href="post.html"><img src="img/blog-1.jpg" alt="..." class="img-fluid"></a></div>
-          <div class="post-details">
-            <div class="post-meta d-flex justify-content-between">
-              <div class="date">20 May | 2016</div>
-              <div class="category"><a href="#">Business</a></div>
-            </div><a href="post.html">
-              <h3 class="h4">Ways to remember your important ideas</h3></a>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
+        {% if blog %}
+          {% for blogpost in blog %}
+            
+              <div class="post col-md-4">
+                <div class="post-thumbnail"><a href="{% url 'blogpost' blogpost.id %}"><img src="{{ blogpost.photo_main.url }}" alt="..." class="img-fluid"></a></div>
+                <div class="post-details">
+                  <div class="post-meta d-flex justify-content-between">
+                   <div></div>
+                    <div class="category"><a href="#">{{ blogpost.category }}</a></div>
+                  </div><a href="{% url 'blogpost' blogpost.id %}">
+                    <h3 class="h4">{{ blogpost.title }}</h3></a>
+                  <p class="text-muted">{{blogpost.article|truncatewords:20}} <a class="h6" href="{% url 'blogpost' blogpost.id %}">Read More</a></p>
+                </div>
+              </div>
+            
+          {% endfor %}
+        {% else %}
+          <div class="col-md-12">
+            <p>New Posts Should Be Up Soon.</p>
           </div>
-        </div>
-        <div class="post col-md-4">
-          <div class="post-thumbnail"><a href="post.html"><img src="img/blog-2.jpg" alt="..." class="img-fluid"></a></div>
-          <div class="post-details">
-            <div class="post-meta d-flex justify-content-between">
-              <div class="date">20 May | 2016</div>
-              <div class="category"><a href="#">Technology</a></div>
-            </div><a href="post.html">
-              <h3 class="h4">Diversity in Engineering: Effect on Questions</h3></a>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
-          </div>
-        </div>
-        <div class="post col-md-4">
-          <div class="post-thumbnail"><a href="post.html"><img src="img/blog-3.jpg" alt="..." class="img-fluid"></a></div>
-          <div class="post-details">
-            <div class="post-meta d-flex justify-content-between">
-              <div class="date">20 May | 2016</div>
-              <div class="category"><a href="#">Financial</a></div>
-            </div><a href="post.html">
-              <h3 class="h4">Alberto Savoia Can Teach You About Interior</h3></a>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
-          </div>
-        </div>
-      </div>
+        {% endif %}
+      </div>  
     </div>
   </section>
-  <!-- Newsletter Section-->
-  <section class="newsletter no-padding-top">    
+
+  <!-- Divider Section-->
+  <section style="background: url({% static 'img/run.jpg' %}); background-size: cover; background-position: bottom" class="divider">
     <div class="container">
       <div class="row">
-        <div class="col-md-6">
-          <h2>Subscribe to Newsletter</h2>
-          <p class="text-big">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
-        <div class="col-md-8">
-          <div class="form-holder">
-            <form action="#">
-              <div class="form-group">
-                <input type="email" name="email" id="email" placeholder="Type your email address">
-                <button type="submit" class="submit">Subscribe</button>
-              </div>
-            </form>
-          </div>
+        <div class="col-md-7">
+          <h2>If you want something you’ve never had, you must be willing to do something you’ve never done</h2>
         </div>
       </div>
     </div>
   </section>
-  
+
+  <!-- Shop -->
+  <section class="latest-posts"> 
+    <div class="container">
+      <header> 
+        <h1 class='text-center' >Shop</h1>
+      </header>
+      <div class="card-deck">
+        <div class="card">
+          <a href="{% url 'store' %}">
+          <img class="card-img-top" src="{% static '/img/orange.jpg' %}" alt="Card image cap"> 
+          </a>  
+        </div>
+        <div class="card">
+          <a href="{% url 'store' %}">
+          <img class="card-img-top" src="{% static '/img/orange.jpg' %}" alt="Card image cap">
+          </a>
+        </div>
+        <div class="card">
+          <a href="{% url 'store' %}">
+          <img class="card-img-top" src="{% static '/img/orange.jpg' %}" alt="Card image cap" >
+          </a>
+        </div>
+      </div>
+      <div class='text-center'>
+        <a href="{% url 'store' %}">
+        <button type="button" class="btn btn-outline-secondary btn-lg">Visit Shop</button>
+        </a>
+      </div>
+    </div>
+  </section>
+
 
 {% endblock %}
