Comment section Complete

--- a/templates/blog/blog.html
+++ b/templates/blog/blog.html
@@ -37,7 +37,7 @@
             {% endif %}
           </div> 
           <!-- Pagination -->
-          <nav aria-label="Page navigation example">
+          <nav aria-label="Page navigation ">
 
               {% if blog.has_other_pages %}
               <ul class="pagination pagination-template d-flex justify-content-center">
