--- a/templates/pages/store.html
+++ b/templates/pages/store.html
@@ -3,7 +3,5 @@
 {% load static %}
 
 {% block content %}
-
-<h1>Store page</h1>
-
+<img src="{% static '/img/storebg.png' %}" class="img-fluid" alt="Store Coming Soon">
 {% endblock %}
