Blogpost Comment Alert

--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -9,6 +9,9 @@
       <!-- Latest Posts -->
       <main class="post blog-post col-lg-8"> 
         <div class="container">
+          <!-- Alerts -->
+            {% include 'partials/_alerts.html' %}
+              <br/>
           <div class="post-single">
             <div class="post-thumbnail"><img src="{{ blogpost.photo_main.url }}" alt="..." class="img-fluid"></div>
             <div class="post-details">
