--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -12,7 +12,7 @@
       <div>
         <div>
           <h1 class='text-center'>Avele</h1>
-          <h6 class='text-center'> Get in the best shape of your life</h6>
+          <h6 class='text-center'> Get it done today</h6>
         </div>
       </div><a href=".intro" class="continue link-scroll"><i class="fa fa-long-arrow-down"></i> Scroll Down</a>
     </div>
@@ -22,8 +22,9 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8">
-          <h2 class="h3">Some great intro here</h2>
-          <p class="text-big">Place a nice <strong>introduction</strong> here <strong>to catch reader's attention</strong>. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderi.</p>
+
+          <p class="text-big"> As<strong> Avele</strong> we aim to help you appreciate your body and let it speak for you.
+          Availing yourself is enough and that counts. Take the step towards becoming the <strong>best you've ever been.</strong> Be part of the team, be an <strong>Avelete.</strong> </p>
         </div>
       </div>
     </div>
