--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -20,7 +20,7 @@
             <ul class="social-menu">
               <li class="list-inline-item"><a href="#"><i class="fa fa-facebook"></i></a></li>
               <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
-              <li class="list-inline-item"><a href="#"><i class="fa fa-instagram"></i></a></li>
+              <li class="list-inline-item"><a href="https://www.instagram.com/avelefitness/"><i class="fa fa-instagram"></i></a></li>
             </ul>
           </div>
           
