--- a/templates/blog/blogpost.html
+++ b/templates/blog/blogpost.html
@@ -27,7 +27,7 @@
                 </div>
               </div>
               <div class="post-body">
-                <p class>{{blogpost.article|linebreaks|safe}}</p>
+                <p class>{{blogpost.article|safe}}</p>
                 <blockquote class="blockquote">
                   <footer class="blockquote-footer">
                     <cite title="Source Title">{{ blogpost.highlight_text }}</cite>
