--- a/templates/blog/blog.html
+++ b/templates/blog/blog.html
@@ -21,7 +21,7 @@
                      <div class="category"><a href="#">{{ blogpost.category }}</a></div>
                     </div><a href="{% url 'blogpost' blogpost.id %}">
                       <h3 class="h4">{{ blogpost.title }}</h3></a>
-                    <p class="text-muted">{{blogpost.article|truncatewords:20}}</p>
+                    <p class="text-muted">{{blogpost.article|truncatewords:20|safe}}</p>
                     <footer class="post-footer d-flex align-items-center">
                       <div class="date"><i class="icon-clock"></i> {{ blogpost.list_date | timesince }} Ago</div>
                     </footer>
