--- a/templates/blog/blog.html
+++ b/templates/blog/blog.html
@@ -15,11 +15,11 @@
 
                 <!-- post -->
                 <div class="post col-xl-6">
-                  <div class="post-thumbnail"><a href="{% url 'blogpost' blogpost.id %}"><img src="{{ blogpost.photo_main.url }}" alt="..." class="img-fluid"></a></div>
+                  <div class="post-thumbnail"><a href="{% url 'blogpost' blogpost.slug blogpost.pk %}"><img src="{{ blogpost.photo_main.url }}" alt="..." class="img-fluid"></a></div>
                   <div class="post-details">
                     <div class="post-meta d-flex justify-content-between">
                      <div class="category"><a href="#">{{ blogpost.category }}</a></div>
-                    </div><a href="{% url 'blogpost' blogpost.id %}">
+                    </div><a href="{% url 'blogpost' blogpost.slug blogpost.pk %}">
                       <h3 class="h4">{{ blogpost.title }}</h3></a>
                     <p class="text-muted">{{blogpost.article|truncatewords:20|safe}}</p>
                     <footer class="post-footer d-flex align-items-center">
