--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -42,14 +42,14 @@
           {% for blogpost in blog %}
             
               <div class="post col-md-4">
-                <div class="post-thumbnail"><a href="{% url 'blogpost' blogpost.id %}"><img src="{{ blogpost.photo_main.url }}" alt="..." class="img-fluid"></a></div>
+                <div class="post-thumbnail"><a href="{% url 'blogpost' blogpost.slug blogpost.pk %}"><img src="{{ blogpost.photo_main.url }}" alt="..." class="img-fluid"></a></div>
                 <div class="post-details">
                   <div class="post-meta d-flex justify-content-between">
                    <div></div>
                     <div class="category"><a href="#">{{ blogpost.category }}</a></div>
-                  </div><a href="{% url 'blogpost' blogpost.id %}">
+                  </div><a href="{% url 'blogpost' blogpost.slug blogpost.pk %}">
                     <h3 class="h4">{{ blogpost.title }}</h3></a>
-                  <p class="text-muted">{{blogpost.article|truncatewords:20|safe}} <a class="h6" href="{% url 'blogpost' blogpost.id %}">Read More</a></p>
+                  <p class="text-muted">{{blogpost.article|truncatewords:20|safe}} <a class="h6" href="{% url 'blogpost' blogpost.slug blogpost.pk %}">Read More</a></p>
                 </div>
               </div>
             
