--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -23,7 +23,6 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8">
-
           <p class="text-big"> As<strong> Avele</strong> we aim to help you appreciate your body and let it speak for you.
           Availing yourself is enough and that counts. Take the step towards becoming the <strong>best you've ever been.</strong> Be part of the team, be an <strong>Avelete.</strong> </p>
         </div>
@@ -32,7 +31,7 @@
   </section>
 
   <!-- Latest Posts -->
-  <section class="latest-posts"> 
+  <section class="latest-post"> 
     <div class="container">
       <header> 
         <h2 class='text-center'>Latest from the blog</h2>
