--- a/avele/static/css/style.default.css
+++ b/avele/static/css/style.default.css
@@ -63,6 +63,15 @@ ul {
   padding: 0;
 }
 
+section.latest-post {
+  padding: 50px 0;
+  overflow-x: hidden;
+}
+
+section.latest-post header{
+  margin-bottom: 50px;
+}
+
 section {
   padding: 100px 0;
   overflow-x: hidden;
