Merch Image Update

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -82,17 +82,17 @@
       <div class="card-deck">
         <div class="card">
           <a href="{% url 'store' %}">
-          <img class="img-fluid merch" src="{% static '/img/Merch1.jpg' %}" alt="Avele Black Tee Men"> 
+          <img class="img-fluid merch" src="{% static '/img/shirt1.jpg' %}" alt="Avele Black Tee Men"> 
           </a>  
         </div>
         <div class="card">
           <a href="{% url 'store' %}">
-          <img class="img-fluid merch" src="{% static '/img/Merch2.jpg' %}" alt="Avele White Tee Ladies">
+          <img class="img-fluid merch" src="{% static '/img/shirt2.jpg' %}" alt="Avele White Tee Ladies">
           </a>
         </div>
         <div class="card">
           <a href="{% url 'store' %}">
-          <img class="img-fluid merch" src="{% static '/img/Merch4.jpg' %}" alt="Avele Tees Unisex" >
+          <img class="img-fluid merch" src="{% static '/img/shirt3.jpg' %}" alt="Avele Tees Unisex" >
           </a>
         </div>
       </div>
