--- a/templates/base2.html
+++ b/templates/base2.html
@@ -20,6 +20,8 @@
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
     <!-- Favicon-->
     <link rel="shortcut icon" href="{% static '/img/favicon.ico' %}">
+    <!-- Chimp Pop up-->
+    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/e3699373e301b97c1025c22ec/3dbc880ed7a0eef5a9357b4e7.js");</script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-PEEGJP7CYT"></script>
     <script>
