--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -31,7 +31,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <p>&copy; 2021. All rights reserved. H3D Technologies</p>
+            <p>&copy; 2021. All rights reserved. Avele</p>
           </div>
           <div class="col-md-6 text-right">
             
